--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.3",
-    "graphql": "^16.8.1"
+    "dotenv": "^16.3.1",
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.1",
+    "mongoose-unique-validator": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
